--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
   place-items: center;
   min-height: 100vh;
   background-color: antiquewhite;
-  background-image: url(src/assets/background.webp);
+  background-image: url(background.webp);
   background-position: center;
   background-size: cover;
 }
